2025-01-08T01:42:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12662487368 # 534
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
* notice: last 14d: unq all: 4 1711
* notice: prev accum: outdated-unq outdated-all / unq all: 2358 238603 / 2377 240393
* notice: next accum: outdated-unq outdated-all / unq all: 2359 238731 / 2378 240518
* notice: prev exec diff / last date diff / accum: unq all: +1 +125 -1 -76 / +1 +123 -0 -0 / 1 123
* notice: removed / changed dates: [2024-12-24] / [2024-12-25 2025-01-06 2025-01-07]

2025-01-07T01:43:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12643596648 # 533
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-07
* notice: last 14d: unq all: 4 1715
* notice: prev accum: outdated-unq outdated-all / unq all: 2357 238476 / 2374 240266
* notice: next accum: outdated-unq outdated-all / unq all: 2358 238603 / 2377 240393
* notice: prev exec diff / last date diff / accum: unq all: +3 +127 -0 -75 / +3 +127 -0 -0 / 3 127
* notice: removed / changed dates: [2024-12-23] / [2024-12-24 2025-01-06]

2025-01-06T01:46:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12625014412 # 532
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-06
* notice: last 14d: unq all: 2 1715
* notice: prev accum: outdated-unq outdated-all / unq all: 2355 238347 / 2372 240135
* notice: next accum: outdated-unq outdated-all / unq all: 2357 238476 / 2374 240266
* notice: prev exec diff / last date diff / accum: unq all: +2 +131 -0 -75 / +2 +129 -0 -0 / 2 129
* notice: removed / changed dates: [2024-12-22] / [2024-12-23 2025-01-04 2025-01-05]

2025-01-05T01:48:50Z: