@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-01-08T01:42:29Z",
-  "count_outdated" : 238731,
-  "uniques_outdated" : 2359,
-  "count" : 240518,
-  "uniques" : 2378,
+  "timestamp" : "2025-01-09T02:09:31Z",
+  "count_outdated" : 238860,
+  "uniques_outdated" : 2361,
+  "count" : 240646,
+  "uniques" : 2379,
   "clones" : [
     {
-      "timestamp": "2024-12-25T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 53, 129 ],
-      "count_decinc": [ 76, 129 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-12-26T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count": 52,
+      "count_minmax": [ 52, 128 ],
+      "count_decinc": [ 76, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,15 @@
       "count": 123,
       "count_minmax": [ 123, 123 ],
       "count_decinc": [ 0, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 128,
+      "count_minmax": [ 128, 128 ],
+      "count_decinc": [ 0, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
