@@ -1,15 +1,10 @@
 {
-  "count": 1711,
+  "count": 1710,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-12-25T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-12-26T00:00:00Z",
-      "count": 128,
+      "count": 52,
       "uniques": 1
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2025-01-07T00:00:00Z",
       "count": 123,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 128,
       "uniques": 1
     }
   ]
