@@ -1,3 +1,12 @@
+2025-01-09T02:09:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12682330565 # 535
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
+* notice: last 14d: unq all: 4 1710
+* notice: prev accum: outdated-unq outdated-all / unq all: 2359 238731 / 2378 240518
+* notice: next accum: outdated-unq outdated-all / unq all: 2361 238860 / 2379 240646
+* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -76 / +1 +128 -0 -0 / 1 128
+* notice: removed / changed dates: [2024-12-25] / [2024-12-26 2025-01-08]
+
 2025-01-08T01:42:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12662487368 # 534
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
